force-app/main/default/objects/PartnerStaging__c/PartnerStaging__c.object-meta.xml
<CustomObject>
    <label>Partner Staging</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Partner Staging Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>