force-app/main/default/objects/PartnerStaging__c/fields/AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>AddressLine1__c</fullName>
    <label>Address Line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>