force-app/main/default/objects/PartnerStaging__c/fields/AddressLine3__c.field-meta.xml
<CustomField>
    <fullName>AddressLine3__c</fullName>
    <label>Address Line 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>