force-app/main/default/objects/PartnerStaging__c/fields/CountyState__c.field-meta.xml
<CustomField>
    <fullName>CountyState__c</fullName>
    <label>County/State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>