force-app/main/default/objects/PartnerStaging__c/fields/CustomerFirstName__c.field-meta.xml
<CustomField>
    <fullName>CustomerFirstName__c</fullName>
    <label>Customer First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>