force-app/main/default/objects/PartnerStaging__c/fields/CustomerLastName__c.field-meta.xml
<CustomField>
    <fullName>CustomerLastName__c</fullName>
    <label>Customer Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>