force-app/main/default/objects/PartnerStaging__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>&apos;No&apos;</defaultValue>
    <label>Processed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>