force-app/main/default/objects/PartnerStaging__c/fields/ProcessingErrorDetails__c.field-meta.xml
<CustomField>
    <fullName>ProcessingErrorDetails__c</fullName>
    <label>Processing Error Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>