force-app/main/default/objects/PartnerStaging__c/fields/Subscription_Currency__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Currency__c</fullName>
    <description>Subscription Currency in ISO format</description>
    <label>Subscription Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>