force-app/main/default/objects/PartnerStaging__c/fields/SubscriptionTier__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionTier__c</fullName>
    <label>Subscription Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subscription_Tier</valueSetName>
    </valueSet>
</CustomField>