force-app/main/default/objects/PartnerStaging__c/fields/SubscriptionType__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionType__c</fullName>
    <label>Subscription Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subscription_Type</valueSetName>
    </valueSet>
</CustomField>