force-app/main/default/objects/PartnerStaging__c/fields/SubscriptionValue__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionValue__c</fullName>
    <label>Subscription Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>