force-app/main/default/objects/PartnerStaging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CustomerFirstName__c</columns>
    <columns>CustomerLastName__c</columns>
    <columns>PostCode__c</columns>
    <columns>SubscriptionTier__c</columns>
    <columns>SubscriptionType__c</columns>
    <columns>SubscriptionValue__c</columns>
    <columns>Subscription_Currency__c</columns>
    <columns>Processed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>